[tool.poetry]
name = "neurokit_examples"
version = "0.1.0"
description = ""
authors = ["Oliver Searle-Barnes <obarnes@blvd.co>"]

[tool.poetry.dependencies]
python = "3.10.1"
setuptools = "^60.9.0"
ipykernel = "^6.9.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
neurokit2 = "^0.1.5"
PyWavelets = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
